--- a/C4.ipynb
+++ b/C4.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "498e84bd",
    "metadata": {},
    "outputs": [
@@ -698,13 +698,7 @@
       "['chief', 'clerk'] 352\n",
       "['chief', 'clerk'] 353\n",
       "['chief', 'clerk'] 354\n",
-      "['chief', 'preparator'] 355\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['chief', 'preparator'] 355\n",
       "['chief', 'clerk'] 356\n",
       "['chief', 'telephone', 'operator'] 357\n",
       "['chief', 'stationary', 'engineer'] 358\n",
@@ -1490,6 +1484,146 @@
     "    if 'chief' in row.lower():  #sin .split() cuenta una suma mayor\n",
     "        count=count+1\n",
     "        print (row.lower(),count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f150d295",
+   "metadata": {},
+   "source": [
+    "FUNCIONES LAMBDA\n",
+    "\n",
+    "Para los dataframes siempre esta la opcion de usar .apply(lambda...)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "88b3d622",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fechas = pd.DataFrame({'A': [1, 2], 'Fechas': [\"10/21\", \"20/22\"]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "521ef061",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>Fechas</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>10/21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20/22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A Fechas\n",
+       "0  1  10/21\n",
+       "1  2  20/22"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fechas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "b58056aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "año=lambda x: x[3:] == '21'  # x[3:] a partir del 3 inclusive\n",
+    "\n",
+    "#me devuelve verdadero o falso segun si matchea con el año que le puse, 21 en este caso"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6cf074ff",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     True\n",
+       "1    False\n",
+       "Name: Fechas, dtype: bool"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fechas[\"Fechas\"].apply(año)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "74e41a1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# cuantos resultados verdaderos tengo? \n",
+    "sum(fechas[\"Fechas\"].apply(año))"
    ]
   }
  ],
