--- a/2_Pandas/03-Python-for-Data-Analysis-Pandas/04-Missing Data.ipynb
+++ b/2_Pandas/03-Python-for-Data-Analysis-Pandas/04-Missing Data.ipynb
@@ -35,9 +35,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dict={'A':[1,2,np.nan],\n",
-    "                  'B':[5,np.nan,np.nan],\n",
-    "                  'C':[1,2,3]}"
+    "dict={ 'A':[1,2,np.nan], \n",
+    "       'B':[5,np.nan,np.nan],\n",
+    "       'C':[1,2,3]}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "np.nan is for missing or non value"
    ]
   },
   {
@@ -46,9 +53,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame({'A':[1,2,np.nan],\n",
-    "                  'B':[5,np.nan,np.nan],\n",
-    "                  'C':[1,2,3]})"
+    "df = pd.DataFrame({ 'A':[1,2,np.nan],\n",
+    "                    'B':[5,np.nan,np.nan],\n",
+    "                    'C':[1,2,3]})"
    ]
   },
   {
@@ -123,13 +130,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -155,13 +177,83 @@
        "0  1.0  5.0  1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.dropna() #saca las filas que tienen NaN values"
+    "df.dropna() #saca las filas que tienen NaN values, por default toma axis=0, que es lo que indica que se eliminen las filas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     A    B  C\n",
+       "0  1.0  5.0  1\n",
+       "1  2.0  NaN  2\n",
+       "2  NaN  NaN  3"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df # no lo elimina permanentemente acordate que para cambios definitivos habia que avisar"
    ]
   },
   {
@@ -210,13 +302,16 @@
     }
    ],
    "source": [
-    "df.dropna(axis=1) #podes configurar para que elimine columnas en vez de fila"
+    "df.dropna(axis=1) #podes configurar para que elimine columnas en vez de fila\n",
+    "#es decir, para eliminar una fila con Nan values debe haber al menos 2 valores nulos"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -322,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +429,7 @@
        "Name: A, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +441,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -363,7 +460,14 @@
     }
    ],
    "source": [
-    "df['A'].fillna(value=df['A'].mean()) #relleno "
+    "df['A'].fillna(value=df['A'].mean()) # df['A'].mean() significa la media de la columna A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "existen metodos estadisticos para completar correctamente los valores nulos segun cada area.."
    ]
   },
   {
